# lumina_micro

./: .gitignore  LICENSE  README.md  pyproject.toml
artifacts/: example_linear_confidence_model.json  mock_demo_output.txt  ollama_benchmark.json  ollama_demo_output.txt
artifacts/research_heads/: js_reduce_object_index_builder_confidence_probe.pt  js_reduce_object_index_builder_confidence_probe.source.json
examples/: multi_transform_input.js  object_index_transfer_v1.jsonl  public_eval_v1.jsonl  public_eval_v2.jsonl
lumina_micro/contracts/: router_js_array_loop_to_map.py  router_js_reduce_accumulator_refactor.py  router_js_reduce_object_index_builder.py
lumina_micro/demo/: bench_demo.py  run_demo_present.py  run_demo_trace.py  run_demo_view.py
lumina_micro/eval/: aggregate_public_results.py  compare_runtime_calibration.py  compare_runtime_confidence.py  fit_object_index_transfer_calibrator.py  rescore_public_eval.py  run_public_eval.py
lumina_micro/runtime/: __init__.py  contracts.py  executor.py  orchestrator.py  planner.py  router.py  schema.py  specialists.py
paper/: README.md  appendix_methods.md  case_gallery.md  positioning.md  public_eval_harness.md  research_note.md  results_table.md
tools/: run_bench_demo.sh  run_demo_present.sh  run_demo_trace.sh  run_demo_view.sh  run_object_index_transfer_calibration.sh  run_public_eval_aggregate.sh  run_public_eval_builder.sh  run_public_eval_compare_calibrated.sh  run_public_eval_compare_confidence.sh  run_public_eval_prompt.sh  run_public_eval_runtime.sh
(+3 files in other folders)
