[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lumina-micro"
version = "0.1.0"
description = "Verifier-backed local code transformation runtime with narrow micro-specialists."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Jakob Grant" },
]
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["lumina_micro*"]
